--- a/src/app/components/ShareLink/_index.scss
+++ b/src/app/components/ShareLink/_index.scss
@@ -7,6 +7,11 @@
   background-size: auto 100%;
   transition: filter .25s;
 
+  .u-richtext-invert > * > * > &,
+  .u-richtext-invert > * > * > * > & {
+    background-color: $color-grey-800;
+  }
+
   &:hover {
     -webkit-filter: brightness(.95);
     filter: brightness(.95);
